--- a/dvdb-war/src/main/webapp/WEB-INF/skins/dvdb3/template3cols.xhtml
+++ b/dvdb-war/src/main/webapp/WEB-INF/skins/dvdb3/template3cols.xhtml
@@ -5,7 +5,9 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:c="http://java.sun.com/jstl/core"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:s="http://jboss.com/products/seam/taglib" xml:lang="de" lang="de">
+	xmlns:s="http://jboss.com/products/seam/taglib" 
+	xmlns:p="http://primefaces.prime.com.tr/ui"
+	xml:lang="de" lang="de">
 
 <f:view contentType="text/html">
 
@@ -35,6 +37,8 @@ var YUIConfig = {
 </script>
 
 	<ui:include src="/WEB-INF/skins/dvdb3/admanager.xhtml" />
+
+	<p:resources />
 
 	</head>
 	<body>
