--- a/dvdb-war/src/main/webapp/WEB-INF/skins/palace/template2cols.xhtml
+++ b/dvdb-war/src/main/webapp/WEB-INF/skins/palace/template2cols.xhtml
@@ -5,6 +5,7 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:c="http://java.sun.com/jstl/core"
 	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:p="http://primefaces.prime.com.tr/ui"
 	xmlns:s="http://jboss.com/products/seam/taglib" xml:lang="de" lang="de">
 <f:view contentType="text/html">
 
@@ -33,7 +34,8 @@ var YUIConfig = {
 };
 </script>
 
-
+	<p:resources />
+	
 	</head>
 	<body>
 
