--- a/dvdb-war/src/main/webapp/WEB-INF/skins/palace/template3cols.xhtml
+++ b/dvdb-war/src/main/webapp/WEB-INF/skins/palace/template3cols.xhtml
@@ -4,6 +4,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:c="http://java.sun.com/jstl/core"
+	xmlns:p="http://primefaces.prime.com.tr/ui"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:s="http://jboss.com/products/seam/taglib" xml:lang="de" lang="de">
 
@@ -33,6 +34,9 @@ var YUIConfig = {
     combine: false
 };
 </script>
+
+	<p:resources />
+	
 
 	</head>
 	<body>
