--- a/dvdb-war/src/main/webapp/WEB-INF/inc/mediabaseItemActions.xhtml
+++ b/dvdb-war/src/main/webapp/WEB-INF/inc/mediabaseItemActions.xhtml
@@ -4,53 +4,28 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:s="http://jboss.com/products/seam/taglib"
+	xmlns:p="http://primefaces.prime.com.tr/ui"
 	xmlns:f="http://java.sun.com/jsf/core">
+item: #{mediabaseItem.item.title}
+	<h:graphicImage value="/img/icons/22x22/ok.png" width="22" height="22"
+		rendered="#{mediabaseItem.status eq 0}"
+		title="Titel befindet sich in Deiner Moviebase." />
 
-	<s:link view="/manage/edit.xhtml"
-		title="#{messages['manage.editmic.headline_edit']}"
-		rendered="#{mediabaseItem.status eq 0 and mediabaseItem.borrowedToBuddy eq null}"
-		propagation="nest">
-		<f:param name="item" value="#{mediabaseItem.item.id}" />
-		<h:graphicImage value="/img/icons/22x22/ok.png" width="22" height="22"
-			rendered="#{mediabaseItem.status eq 0}" />
-	</s:link>
+	<h:graphicImage value="/img/icons/22x22/ark.png" width="22" height="22"
+		rendered="#{mediabaseItem.status eq 2}" title="Titel ist bestellt." />
 
-	<s:link view="/manage/edit.xhtml"
-		title="#{messages['manage.editmiw.headline_edit']}"
-		rendered="#{mediabaseItem.status eq 1}" propagation="nest">
-		<f:param name="item" value="#{mediabaseItem.item.id}" />
-		<h:graphicImage value="/img/icons/22x22/bookmark.png" width="22"
-			height="22" />
-	</s:link>
+	<h:graphicImage value="/img/icons/22x22/edit_group.png" width="22"
+		height="22" rendered="#{mediabaseItem.status eq 3}"
+		title="Titel ist verliehen." />
 
-	<s:link view="/manage/edit.xhtml"
-		title="#{messages['manage.editmic.headline_edit']}"
-		rendered="#{mediabaseItem.status eq 2}" propagation="nest">
-		<f:param name="item" value="#{mediabaseItem.item.id}" />
-		<h:graphicImage value="/img/icons/22x22/ark.png" width="22"
-			height="22" />
-	</s:link>
+	<h:graphicImage value="/img/icons/22x22/bookmark.png" width="22"
+		height="22" rendered="#{mediabaseItem.status eq 1}"
+		title="Titel befindet sich auf Deiner Wunschliste." />
 
-	<s:link view="/manage/edit.xhtml"
-		title="#{messages['manage.editmic.headline_edit']}"
-		rendered="#{mediabaseItem.borrowedToBuddy ne null}" propagation="nest">
-		<f:param name="item" value="#{mediabaseItem.item.id}" />
-		<h:graphicImage value="/img/icons/22x22/edit_group.png" width="22"
-			height="22" />
-	</s:link>
-
-	<!-- we cannot add custom user dvds to moviebase -->
-	<s:fragment
-		rendered="#{itemVar.item.class.name ne 'de.dvdb.item.user.UserDVDItem'}">
-
-		<s:link view="/manage/edit.xhtml"
-			title="#{messages['manage.editmiw.action.add']}"
-			action="#{addMediabaseItemIntention.addMediabaseItemWish}"
-			rendered="#{mediabaseItem eq null}" propagation="nest">
-			<f:param name="item" value="#{itemVar.item.id}" />
-			<h:graphicImage value="/img/icons/22x22/bookmark_add.png" width="22"
-				height="22" />
-		</s:link>
-	</s:fragment>
+	<p:commandButton update="manageItemDialog" onclick="itemManager.show()"
+		value="#{mediabaseItem eq null?'Hinzufuegen':'Verwalten'}">
+		<f:setPropertyActionListener value="#{mediabaseItem.item}"
+			target="#{itemController.selectedItem}" />
+	</p:commandButton>
 
 </ui:composition>
