--- a/dvdb-war/src/main/webapp/discover/inc/sidebarActions.xhtml
+++ b/dvdb-war/src/main/webapp/discover/inc/sidebarActions.xhtml
@@ -1,193 +1,208 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!-- title sidebar -->
+
 <ui:component xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:c="http://java.sun.com/jstl/core"
 	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:p="http://primefaces.prime.com.tr/ui"
 	xmlns:s="http://jboss.com/products/seam/taglib">
 
-			<img class="photo" src="#{itemDetails.urlImageLarge}"
-				alt="Cover von #{itemDetails.titleWithMediatype}"
-				title="Cover von #{itemDetails.titleWithMediatype}" width="116" />
+	<h:graphicImage class="photo" url="#{itemDetails.urlImageLarge}"
+		alt="Cover von #{itemDetails.titleWithMediatype}"
+		title="Cover von #{itemDetails.titleWithMediatype}" width="116" />
 
-	<div class="sidenav">
-	<div class="mod">
-	<div class="hd">
-	<h3>Aktionen</h3>
-	</div>
-	<div class="bd">
-	<ul>
+	<s:div styleClass="sidenav">
+		<s:div styleClass="mod">
 
-		<s:fragment rendered="#{theme.showAmazonLinks}">
+			<s:div styleClass="hd">
+				<h:outputText value="#{messages['sidebarActions.h3']}"
+					escape="false" />
+			</s:div>
+			<s:div styleClass="bd">
 
-			<s:fragment rendered="#{itemVar.amazonPrice ne null}">
-				<li style="background: none;"><h:outputLink
-					value="#{itemVar.amazonPrice.url}"
-					title="#{itemVar.amazonPrice.availability}">
-					<h:graphicImage value="/img/shops/logo_amazon_60.gif"
-						style="float:right" />
-			Kaufen fuer nur &#160;<h:outputText
-						value="#{itemVar.amazonPrice.price}" styleClass="down large">
-						<f:convertNumber type="currency" currencySymbol="&#8364;" />
-					</h:outputText>
-				</h:outputLink></li>
-			</s:fragment>
+				<h:outputText value="#{messages['ul']}" escape="false" />
 
-			<s:fragment rendered="#{itemVar.amazonPrice eq null}">
-				<li style="background: none;"><h:outputLink
-					value="http://www.amazon.de/gp/search?ie=UTF8&amp;amp;keywords=#{itemVar.originalTitle}&amp;amp;tag=vooshde-21&amp;amp;index=dvd&amp;amp;linkCode=ur2&amp;amp;camp=1638&amp;amp;creative=6742"
-					escape="true">
-					<h:graphicImage value="/img/shops/logo_amazon_60.gif" />
-				</h:outputLink></li>
-			</s:fragment>
-		</s:fragment>
+				<s:fragment rendered="#{theme.showAmazonLinks}">
 
+					<s:fragment rendered="#{itemVar.amazonPrice ne null}">
 
-		<s:fragment
-			rendered="#{facesContext.viewRoot.viewId ne '/discover/dvd/details.xhtml' and facesContext.viewRoot.viewId ne '/mb/dvd.xhtml'}">
-			<li style="background: none;"><h:graphicImage
-				value="/img/icons/22x22/cd.png" width="22" height="22"
-				style="float:right" /><s:link view="/discover/dvd/details.xhtml"
-				value="#{messages['discover.item.action.viewDetails']}">
-				<!--				<f:param name="item" value="#{itemVar.id}" />-->
-			</s:link></li>
-		</s:fragment>
+						<h:outputText value="#{messages['li.bgnone']}" escape="false" />
+
+						<h:outputLink value="#{itemVar.amazonPrice.url}"
+							title="#{itemVar.amazonPrice.availability}">
+							<h:graphicImage value="/img/shops/logo_amazon_60.gif"
+								style="float:right" />
+							<h:outputText value="Kaufen fuer nur &#160;" escape="false" />
+							<h:outputText value="#{itemVar.amazonPrice.price}"
+								styleClass="down large">
+								<f:convertNumber type="currency" currencySymbol="&#8364;" />
+							</h:outputText>
+						</h:outputLink>
+						<h:outputText value="#{messages['li.c']}" escape="false" />
+					</s:fragment>
+
+					<s:fragment rendered="#{itemVar.amazonPrice eq null}">
+						<h:outputText value="#{messages['li.bgnone']}" escape="false" />
+						<h:outputLink
+							value="http://www.amazon.de/gp/search?ie=UTF8&amp;amp;keywords=#{itemVar.originalTitle}&amp;amp;tag=vooshde-21&amp;amp;index=dvd&amp;amp;linkCode=ur2&amp;amp;camp=1638&amp;amp;creative=6742"
+							escape="true">
+							<h:graphicImage value="/img/shops/logo_amazon_60.gif" />
+						</h:outputLink>
+						<h:outputText value="#{messages['li.c']}" escape="false" />
+					</s:fragment>
+				</s:fragment>
 
 
-		<!-- we cannot add custom user dvds to moviebase -->
-		<s:fragment
-			rendered="#{itemVar.class.name ne 'de.dvdb.item.user.UserDVDItem'}">
-			<s:fragment
-				rendered="#{(!identity.loggedIn or mediabaseItemVar eq null or mediabaseItemVar.id eq null) and facesContext.viewRoot.viewId ne '/manage/edit.xhtml' and facesContext.viewRoot.viewId ne '/shopping/prices.xhtml'}">
-				<li style="background: none;"><h:graphicImage
-					value="/img/icons/22x22/bookmark_add.png" width="22" height="22"
-					style="float:right" /><s:link view="/manage/edit.xhtml"
-					propagation="nest"
-					action="#{addMediabaseItemIntention.addMediabaseItemWish}"
-					value="#{messages['discover.item.action.addWishlist']}">
-					<f:param name="item" value="#{itemVar.id}" />
-				</s:link></li>
-			</s:fragment>
-
-			<s:fragment
-				rendered="#{(!identity.loggedIn or mediabaseItemVar.id eq null) and facesContext.viewRoot.viewId ne '/manage/edit.xhtml' and facesContext.viewRoot.viewId ne '/shopping/prices.xhtml'}">
-				<li style="background: none;"><h:graphicImage
-					value="/img/icons/22x22/edit_add.png" width="22" height="22"
-					style="float:right" /><s:link
-					action="#{addMediabaseItemIntention.addMediabaseItemCollectible}"
-					view="/manage/edit.xhtml" propagation="nest"
-					value="#{messages['discover.item.action.addMoviebase']}">
-				</s:link></li>
-			</s:fragment>
-		</s:fragment>
-
-		<s:fragment
-			rendered="#{mediabaseItemVar.id ne null and mediabaseItemVar.status eq 0 and mediabaseItemVar.borrowedToBuddy eq null and facesContext.viewRoot.viewId ne '/manage/edit.xhtml'}">
-			<li style="background: none;"><h:graphicImage
-				value="/img/icons/22x22/ok.png" width="22" height="22"
-				style="float:right" /><s:link view="/manage/edit.xhtml"
-				value="#{messages['discover.item.action.editMoviebase']}"
-				propagation="nest">
-				<f:param name="item" value="#{itemVar.id}" />
-			</s:link></li>
-		</s:fragment>
+				<s:fragment
+					rendered="#{facesContext.viewRoot.viewId ne '/discover/dvd/details.xhtml' and facesContext.viewRoot.viewId ne '/mb/dvd.xhtml'}">
+					<h:outputText value="#{messages['li.bgnone']}" escape="false" />
+					<h:graphicImage value="/img/icons/22x22/cd.png" width="22"
+						height="22" style="float:right" />
+					<s:link view="/discover/dvd/details.xhtml"
+						value="#{messages['discover.item.action.viewDetails']}">
+						<!--				<f:param name="item" value="#{itemVar.id}" />-->
+					</s:link>
+					<h:outputText value="#{messages['li.c']}" escape="false" />
+				</s:fragment>
 
 
-		<s:fragment
-			rendered="#{mediabaseItemVar.status eq 2 and mediabaseItemVar.borrowedToBuddy eq null}">
-			<li style="background: none;"><h:graphicImage
-				value="/img/icons/22x22/ark.png" width="22" height="22"
-				style="float:right" /> <s:link view="/manage/edit.xhtml"
-				propagation="nest"
-				value="#{messages['discover.item.action.editMoviebase']}">
-				<f:param name="item" value="#{itemVar.id}" />
-			</s:link></li>
-		</s:fragment>
+				<s:fragment rendered="#{!identity.loggedIn}">
 
-		<s:fragment rendered="#{mediabaseItemVar.borrowedToBuddy ne null}">
-			<li style="background: none;"><h:graphicImage
-				value="/img/icons/22x22/edit_group.png" width="22" height="22"
-				style="float:right" /><s:link view="/manage/edit.xhtml"
-				propagation="nest"
-				value="#{messages['discover.item.action.editMoviebase']}">
-				<f:param name="item" value="#{itemVar.id}" />
-			</s:link></li>
-		</s:fragment>
+					<h:outputText value="#{messages['li.bgnone']}" escape="false" />
 
-		<s:fragment
-			rendered="#{mediabaseItemVar.class.name eq 'de.dvdb.domain.model.mediabase.MediabaseItemWish' and facesContext.viewRoot.viewId ne '/manage/edit.xhtml' }">
-			<li style="background: none;"><h:graphicImage
-				value="/img/icons/22x22/bookmark.png" width="22" height="22"
-				style="float:right" /><s:link view="/manage/edit.xhtml"
-				propagation="nest"
-				value="#{messages['discover.item.action.editWishlist']}">
-				<f:param name="item" value="#{itemVar.id}" />
-			</s:link></li>
-		</s:fragment>
+					<h:graphicImage value="/img/icons/22x22/bookmark.png" width="22"
+						height="22" style="float:right" />
 
-		<s:fragment
-			rendered="#{mediabaseItemVar.class.name eq 'de.dvdb.domain.model.mediabase.MediabaseItemWish'}">
-			<li style="background: none;"><h:graphicImage
-				value="/img/icons/22x22/bookmarks_list_add.png" width="22"
-				height="22" style="float:right" /><s:link view="/manage/edit.xhtml"
-				action="#{mediabaseItemAction.moveWishToCollection}"
-				value="#{messages['manage.edit.action.moveToCollection']}">
-				<f:param name="item" value="#{itemVar.id}" />
-			</s:link></li>
-		</s:fragment>
+					<h:graphicImage value="/img/icons/22x22/edit_add.png" width="22"
+						height="22" style="float:right" />
 
-		<s:fragment rendered="#{itemVar.forumThreadId ne null}">
-			<li style="background: none;"><h:graphicImage
-				value="/img/icons/22x22/agt_family.png" width="22" height="22"
-				style="float:right" /><h:outputLink
-				value="http://www.dvdb.de/forum/showthread.php?goto=newpost&amp;amp;threadid=#{itemVar.forumThreadId}">
-			#{messages['discover.item.action.discussItem']}
-			
-			<h:outputText
-					value=" (#{forumTasks.getNumberOfPostings(itemVar.forumThreadId)})" />
+					<s:link view="/login.xhtml" value="Titel verwalten"/>
 
-			</h:outputLink></li>
-		</s:fragment>
+				</s:fragment>
 
-		<s:fragment rendered="true">
-			<li style="background: none;"><h:graphicImage
-				value="/img/icons/22x22/contents1.png" width="22" height="22"
-				style="float:right" /><s:link
-				action="#{blogAction.createBlogEntry}" value="Blogeintrag schreiben" />
-			</li>
-		</s:fragment>
+				<s:fragment rendered="#{identity.loggedIn}">
+					<h:outputText value="#{messages['li.bgnone']}" escape="false" />
 
-		<s:fragment rendered="#{itemVar.forumPriceThreadId ne null}">
-			<li style="background: none;"><h:graphicImage
-				value="/img/icons/22x22/deals.png" width="22" height="22"
-				style="float:right" /><h:outputLink
-				value="http://www.dvdb.de/forum/showthread.php?goto=newpost&amp;amp;threadid=#{itemVar.forumPriceThreadId}">
-			#{messages['discover.item.action.discussPrices']}
-		</h:outputLink></li>
-		</s:fragment>
+					<h:graphicImage value="/img/icons/22x22/bookmark.png" width="22"
+						height="22" style="float:right"
+						rendered="#{mediabaseItemVar.class.name eq 'de.dvdb.domain.model.mediabase.MediabaseItemWish'}" />
+
+					<h:graphicImage value="/img/icons/22x22/edit_group.png" width="22"
+						height="22" style="float:right"
+						rendered="#{mediabaseItemVar.borrowedToBuddy ne null}" />
+
+					<h:graphicImage value="/img/icons/22x22/ark.png" width="22"
+						height="22" style="float:right"
+						rendered="#{mediabaseItemVar.status eq 2 and mediabaseItemVar.borrowedToBuddy eq null}" />
+
+					<h:graphicImage value="/img/icons/22x22/ok.png" width="22"
+						height="22" style="float:right"
+						rendered="#{mediabaseItemVar.id ne null and mediabaseItemVar.status eq 0 and mediabaseItemVar.borrowedToBuddy eq null}" />
+
+					<h:graphicImage value="/img/icons/22x22/edit_add.png" width="22"
+						height="22" style="float:right"
+						rendered="#{!identity.loggedIn or mediabaseItemVar.id eq null}" />
+
+					<h:graphicImage value="/img/icons/22x22/bookmark_add.png"
+						width="22" height="22" style="float:right"
+						rendered="#{!identity.loggedIn or mediabaseItemVar eq null or mediabaseItemVar.id eq null}" />
+
+					<p:commandLink update="manageItemDialog"
+						onclick="itemManager.show()" value="Titel verwalten">
+						<f:setPropertyActionListener value="#{itemVar}"
+							target="#{itemController.selectedItem}" />
+					</p:commandLink>
+
+					<h:outputText value="#{messages['li.c']}" escape="false" />
+				</s:fragment>
 
 
-		<s:fragment
-			rendered="#{itemVar.class.name eq 'de.dvdb.item.user.UserDVDItem'}">
-			<li style="background: none;"><h:graphicImage
-				value="/img/icons/22x22/edit.png" width="22" height="22"
-				style="float:right" /><s:link propagation="nest"
-				value="#{messages['manage.db.edit']}" view="/manage/db/edit.xhtml">
-				<f:param name="item" value="#{itemVar.id}" />
-			</s:link></li>
-		</s:fragment>
+				<s:fragment rendered="#{itemVar.forumThreadId ne null}">
+					<h:outputText value="#{messages['li.bgnone']}" escape="false" />
+					<h:graphicImage value="/img/icons/22x22/agt_family.png" width="22"
+						height="22" style="float:right" />
+					<h:outputLink
+						value="http://www.dvdb.de/forum/showthread.php?goto=newpost&amp;amp;threadid=#{itemVar.forumThreadId}">
+						<h:outputText
+							value="#{messages['discover.item.action.discussItem']}" />
+						<h:outputText
+							value=" (#{forumTasks.getNumberOfPostings(itemVar.forumThreadId)})" />
 
-		<s:fragment rendered="#{s:hasRole('superuser')}">
-			<li style="background: none;"><h:graphicImage
-				value="/img/icons/22x22/edit.png" width="22" height="22"
-				style="float:right" /><s:link propagation="nest"
-				value="#{messages['manage.db.edit']}" view="/admin/item.xhtml">
-				<f:param name="itemId" value="#{itemVar.id}" />
-			</s:link></li>
-		</s:fragment>
+					</h:outputLink>
+					<h:outputText value="#{messages['li.c']}" escape="false" />
+				</s:fragment>
 
-	</ul>
-	</div>
-	</div>
-	</div>
+				<s:fragment rendered="true">
+					<h:outputText value="#{messages['li.bgnone']}" escape="false" />
+					<h:graphicImage value="/img/icons/22x22/contents1.png" width="22"
+						height="22" style="float:right" />
+					<s:link action="#{blogAction.createBlogEntry}"
+						value="Blogeintrag schreiben" />
+					<h:outputText value="#{messages['li.c']}" escape="false" />
+				</s:fragment>
+
+				<s:fragment rendered="#{itemVar.forumPriceThreadId ne null}">
+					<h:outputText value="#{messages['li.bgnone']}" escape="false" />
+					<h:graphicImage value="/img/icons/22x22/deals.png" width="22"
+						height="22" style="float:right" />
+					<h:outputLink
+						value="http://www.dvdb.de/forum/showthread.php?goto=newpost&amp;amp;threadid=#{itemVar.forumPriceThreadId}">
+						<h:outputText
+							value="#{messages['discover.item.action.discussPrices']}" />
+					</h:outputLink>
+					<h:outputText value="#{messages['li.c']}" escape="false" />
+				</s:fragment>
+
+
+				<s:fragment
+					rendered="#{itemVar.class.name eq 'de.dvdb.item.user.UserDVDItem'}">
+					<h:outputText value="#{messages['li.bgnone']}" escape="false" />
+					<h:graphicImage value="/img/icons/22x22/edit.png" width="22"
+						height="22" style="float:right" />
+					<s:link propagation="nest" value="#{messages['manage.db.edit']}"
+						view="/manage/db/edit.xhtml">
+						<f:param name="item" value="#{itemVar.id}" />
+					</s:link>
+					<h:outputText value="#{messages['li.c']}" escape="false" />
+				</s:fragment>
+
+				<s:fragment rendered="#{s:hasRole('superuser')}">
+					<h:outputText value="&lt;li&gt;" escape="false" />
+
+					<h:outputText value="#{messages['li.bgnone']}" escape="false" />
+					<h:graphicImage value="/img/icons/22x22/edit.png" width="22"
+						height="22" style="float:right" />
+					<s:link propagation="nest" value="#{messages['manage.db.edit']}"
+						view="/admin/item.xhtml">
+						<f:param name="itemId" value="#{itemVar.id}" />
+					</s:link>
+					<h:outputText value="#{messages['li.c']}" escape="false" />
+				</s:fragment>
+
+				<h:outputText value="#{messages['ul.c']}" escape="false" />
+			</s:div>
+		</s:div>
+	</s:div>
+
+	<s:div styleClass="sidenav">
+		<s:div styleClass="mod">
+			<s:div styleClass="hd">
+				<h:outputText value="#{messages['sidebarActions.stats.h3']}"
+					escape="false" />
+			</s:div>
+			<s:div styleClass="bd">
+				<h:outputText value="#{messages['ul']}" escape="false" />
+				<h:outputText value="#{messages['li']}" escape="false" />
+				<h:outputText value="#{messages['discover.inc.stats']}"
+					escape="false"
+					rendered="#{itemDetails.class.name ne 'de.dvdb.item.user.UserDVDItem'}" />
+				<h:outputText value="#{messages['li.c']}" escape="false" />
+				<h:outputText value="#{messages['ul.c']}" escape="false" />
+			</s:div>
+		</s:div>
+	</s:div>
+
 </ui:component>
