--- a/dvdb-war/src/main/webapp/mb/results.xhtml
+++ b/dvdb-war/src/main/webapp/mb/results.xhtml
@@ -5,6 +5,7 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:s="http://jboss.com/products/seam/taglib"
 	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:p="http://primefaces.prime.com.tr/ui"
 	template="#{mediabaseFactory.mediabase.skin.template2Columns}">
 
 	<ui:define name="title">
@@ -24,14 +25,24 @@
 			<h1>#{messages[searchContext.headlineKey]}</h1>
 
 			<h:outputText value="#{messages[searchContext.introKey]}" />
-			<div class="report">
-			<ui:include src="/manage/inc/resultset.xhtml">
+			<div class="report"><ui:include
+				src="/manage/inc/resultset.xhtml">
 				<ui:param name="action" value="#{mbMediabaseSearchAction}" />
 				<ui:param name="page" value="#{mbPage}" />
 				<ui:param name="details" value="/mb/dvd.xhtml" />
-			</ui:include>
-			</div>
+			</ui:include></div>
+		</h:form>
 
+		<h:form prependId="false">
+			<p:dialog widgetVar="itemManager" modal="true" fixedCenter="true"
+				close="true" draggable="false" resizable="false" width="700px"
+				height="500px">
+				<p:outputPanel id="manageItemDialog">
+					<s:fragment rendered="#{selectedItem ne null}">
+						<ui:include src="/manage/editDialog.xhtml" />
+					</s:fragment>
+				</p:outputPanel>
+			</p:dialog>
 		</h:form>
 	</ui:define>
 
