--- a/dvdb-war/src/main/webapp/manage/inc/resultset.xhtml
+++ b/dvdb-war/src/main/webapp/manage/inc/resultset.xhtml
@@ -4,6 +4,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:s="http://jboss.com/products/seam/taglib"
+	xmlns:p="http://primefaces.prime.com.tr/ui"
 	xmlns:f="http://java.sun.com/jsf/core">
 
 	<ui:include src="/WEB-INF/inc/filter.xhtml">
@@ -27,7 +28,7 @@
 			<ui:param name="resultList" value="#{page.results}" />
 		</ui:include>
 	</s:fragment>
-
+	
 	<s:fragment rendered="#{page.lastPageIndex gt 1}">
 		<ui:include src="/WEB-INF/inc/datapaginator2.xhtml">
 			<ui:param name="page" value="#{page}" />
