--- a/dvdb-war/src/main/webapp/manage/results.xhtml
+++ b/dvdb-war/src/main/webapp/manage/results.xhtml
@@ -20,7 +20,7 @@
 
 	<ui:define name="main">
 
-		<h:form>
+		<h:form prependId="false" id="resultList">
 
 			<h1>#{messages[searchContext.headlineKey]}</h1>
 			
@@ -39,9 +39,7 @@
 				close="true" draggable="false" resizable="false" width="700px"
 				height="500px">
 				<p:outputPanel id="manageItemDialog">
-					<s:fragment rendered="#{selectedItem ne null}">
 						<ui:include src="/manage/editDialog.xhtml" />
-					</s:fragment>
 				</p:outputPanel>
 			</p:dialog>
 		</h:form>
