--- a/dvdb-war/src/main/webapp/mb/results.xhtml
+++ b/dvdb-war/src/main/webapp/mb/results.xhtml
@@ -20,7 +20,7 @@
 
 	<ui:define name="main">
 
-		<h:form>
+		<h:form prependId="false" id="resultList">
 
 			<h1>#{messages[searchContext.headlineKey]}</h1>
 
